2006-01-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5crypt.test: More boilerplate simplified via use of test support.

2006-01-19  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5crypt.test: Hooked into the new common test support code.

2005-10-24  Andreas Kupries <andreask@activestate.com>

	* md5crypt.bench: New file. Basic benchmarks for MD5 password
	  hashes.

2005-10-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.8 ========================
	* 

2005-10-05  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5cryptc.tcl: Fix for building with msvc.

2004-10-05  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.7 ========================
	* 

2004-05-23  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6.1 ========================
	* 

2004-02-15  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.6 ========================
	* 

2004-02-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* md5crypt.test: Testsuite fixed. Had to account that error
	  messages can dependent on the version of the Tcl core.

2003-07-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5crypt.tcl:   Provided implementation of the Apache
	* md5cryptc.tcl:  variation of md5crypt - as used in the
	* md5crypt.test:  Apache2 htpasswd program.

	* md5crypt.man:   Added a manual page.
	
2003-07-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* md5crypt.tcl:   Initial version of a pure-Tcl and
	* md5crypt.test:  critcl-enhanced implementation of
	* md5cryptc.tcl:  the BSD MD5-crypt algorithm.
	* pkgIndex.tcl:   
	* ChangeLog:      